# EnvPilot

./: .gitignore  README.md  pyproject.toml
envpilot/: __init__.py  __main__.py  cli.py  core.py  crypto.py  scanner.py  tui.py
tests/: test_envpilot.py
