[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envpilot"
version = "1.0.0"
description = "EnvPilot - Lightweight Environment Variables Intelligent Management Engine | 轻量级环境变量智能管理引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "gitstq"}
]
keywords = [
    "environment-variables",
    "env",
    "dotenv",
    "cli",
    "tui",
    "security",
    "encryption",
    "secret-management"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
envpilot = "envpilot.__main__:main"

[project.urls]
Homepage = "https://github.com/gitstq/EnvPilot"
Repository = "https://github.com/gitstq/EnvPilot"
Issues = "https://github.com/gitstq/EnvPilot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["envpilot*"]

[tool.setuptools.package-data]
envpilot = ["py.typed"]
